Remove unused permissions on Blogs
* Remove unused permissions on Blogs

* Add translations missings for Posts actions

--- a/decidim-blogs/config/locales/en.yml
+++ b/decidim-blogs/config/locales/en.yml
@@ -61,8 +61,10 @@ en:
     components:
       blogs:
         actions:
+          comment: Comment
           create: Create
           destroy: Delete
+          endorse: Endorse
           update: Update
         name: Blog
         settings:
