Add the link target selection to the link extension

--- a/decidim-core/config/locales/en.yml
+++ b/decidim-core/config/locales/en.yml
@@ -1721,6 +1721,10 @@ en:
         altLabel: Alternative text for the image
       link:
         hrefLabel: Link URL
+        targetLabel: Target
+        targets:
+          blank: New tab
+          default: Default (same tab)
       videoEmbed:
         urlLabel: Video URL
     toolbar:
