Change the i18n approach slightly
Fetch the translation dictionary in the context itself where it
is needed. This approach helps adding general translations to the
input modals instead of passing them forward in multiple places.

--- a/decidim-core/config/locales/en.yml
+++ b/decidim-core/config/locales/en.yml
@@ -1727,6 +1727,11 @@ en:
           default: Default (same tab)
       videoEmbed:
         urlLabel: Video URL
+    inputModal:
+      buttons:
+        cancel: Cancel
+        remove: Remove
+        save: Save
     toolbar:
       control:
         blockquote: Blockquote
