Make it possible to configure a title for the video embed iframe

--- a/decidim-core/config/locales/en.yml
+++ b/decidim-core/config/locales/en.yml
@@ -1726,6 +1726,7 @@ en:
           blank: New tab
           default: Default (same tab)
       videoEmbed:
+        titleLabel: Title
         urlLabel: Video URL
     inputModal:
       buttons:
