Add a general upload error message on non HTTP 200 responses

--- a/decidim-core/config/locales/en.yml
+++ b/decidim-core/config/locales/en.yml
@@ -1719,6 +1719,7 @@ en:
     extensions:
       image:
         altLabel: Alternative text for the image
+        uploadError: Uploading the file failed.
       link:
         hrefLabel: Link URL
         targetLabel: Target
