Rename editor modal to dialog for consistency
We are using the dialog concept in the redesign to control the
dialogs, so we want to use consistent naming also in the editor.

--- a/decidim-core/config/locales/en.yml
+++ b/decidim-core/config/locales/en.yml
@@ -1729,7 +1729,7 @@ en:
       videoEmbed:
         titleLabel: Title
         urlLabel: Video URL
-    inputModal:
+    inputDialog:
       buttons:
         cancel: Cancel
         remove: Remove
