added-reported-time-to-user-moderations

--- a/decidim-admin/config/locales/en.yml
+++ b/decidim-admin/config/locales/en.yml
@@ -665,6 +665,8 @@ en:
           name: Name
           nickname: Nickname
           reason: Reason
+          reported_at: Reported at
+          created_at: Created at
           reports: Reports count
           title: Listing participants
         report:
