--- a/decidim-assemblies/config/locales/en.yml
+++ b/decidim-assemblies/config/locales/en.yml
@@ -459,6 +459,10 @@ en:
           organizational_chart: Organizational chart
           promoted_assemblies: Highlighted assemblies
           reset_chart: Reset
+        metadata:
+          children_item:
+            one: "%{count} assembly"
+            other: "%{count} assemblies"
         order_by_assemblies:
           assemblies:
             one: "%{count} assemblies"
