--- a/decidim-admin/config/locales/en.yml
+++ b/decidim-admin/config/locales/en.yml
@@ -1102,15 +1102,15 @@ en:
       models:
         moderation:
           fields:
-            created_at: Creation date
+            created_at: Reported at
             deleted_resource: Deleted resource
             hidden_at: Hidden at
             participatory_space: Participatory space
-            report_count: Count
+            report_count: Reports count
             reportable_id: ID
             reportable_type: Type
             reported_content_url: Reported content URL
-            reports: Reports
+            reports: Reason
             visit_url: Visit URL
         report:
           fields:
