Add content blocks admin management for participatory processes

--- a/decidim-participatory_processes/config/locales/en.yml
+++ b/decidim-participatory_processes/config/locales/en.yml
@@ -127,6 +127,7 @@ en:
           categories: Categories
           components: Components
           info: Info
+          landing_page: Landing page
           moderations: Moderations
           private_users: Private participants
           process_admins: Process admins
