--- a/decidim-core/config/locales/en.yml
+++ b/decidim-core/config/locales/en.yml
@@ -1719,6 +1719,15 @@ en:
     extensions:
       image:
         altLabel: Alternative text for the image
+        nodeView:
+          resizer:
+            control:
+              resize: Resize image (%position%)
+            position:
+              bottomLeft: bottom left corner
+              bottomRight: bottom right corner
+              topLeft: top left corner
+              topRight: top right corner
         uploadError: Uploading the file failed.
       link:
         hrefLabel: Link URL
