--- a/docs/modules/develop/pages/releases.adoc
+++ b/docs/modules/develop/pages/releases.adoc
@@ -275,6 +275,7 @@ Releasing new versions from a *_release/x.y-stable_* branch is quite easy.
 The process is very similar from releasing a new Decidim version:
 
 . Merge all the https://github.com/decidim/decidim/pulls?q=is%3Apr+is%3Aopen+author%3Adecidim-bot+sort%3Aupdated-desc[Crowdin pull requests created by the user `decidim-bot`], specially the one that's going to be marged against the release branch `release/x.y-stable` that should be returned by the provided example search (pick the correct pull request for the release from the results).
+. Make sure that there are no more PRs to backport. Learn more about xref:develop:backports.adoc[Backports].
 . Checkout the branch you want to release: `git checkout -b release/x.y-stable`
 . Update `.decidim-version` to the new version number.
 . Run `bin/rake update_versions`, this will update all references to the new version.
