--- a/decidim-assemblies/config/locales/en.yml
+++ b/decidim-assemblies/config/locales/en.yml
@@ -459,13 +459,14 @@ en:
           organizational_chart: Organizational chart
           promoted_assemblies: Highlighted assemblies
           reset_chart: Reset
+        metadata:
+          children_item:
+            one: "%{count} assembly"
+            other: "%{count} assemblies"
         order_by_assemblies:
           assemblies:
             one: "%{count} assemblies"
             other: "%{count} assemblies"
-        promoted_assembly:
-          more_info: More info
-          take_part: Take part
       assembly_navigation:
         assembly_member_menu_item: Members
         assembly_menu_item: The assembly
