Define a settings form cell for highlighted elements with component selection

--- a/decidim-core/config/locales/en.yml
+++ b/decidim-core/config/locales/en.yml
@@ -521,6 +521,9 @@ en:
           label: 'Sort elements by:'
           random: Random
           recent: Most recent
+        components:
+          all: All
+          label: 'Select component:'
       how_to_participate:
         name: How to participate
       html:
