Register only one html content block in processes homepage

--- a/decidim-participatory_processes/config/locales/en.yml
+++ b/decidim-participatory_processes/config/locales/en.yml
@@ -378,6 +378,8 @@ en:
         related_assemblies: Related assemblies
     participatory_process_groups:
       content_blocks:
+        html:
+          name: HTML block
         html_1:
           name: First HTML block
         html_2:
