Integrate proposals content block adapting highlighted_proposals_for_component cell

--- a/decidim-proposals/config/locales/en.yml
+++ b/decidim-proposals/config/locales/en.yml
@@ -385,7 +385,8 @@ en:
         title: Supports
     participatory_spaces:
       highlighted_proposals:
-        see_all: See all proposals (%{count})
+        last: Last proposals
+        see_all: See all proposals
     proposals:
       actions:
         answer_proposal: Answer proposal
