Integrate blogs posts content block

--- a/decidim-blogs/config/locales/en.yml
+++ b/decidim-blogs/config/locales/en.yml
@@ -50,6 +50,9 @@ en:
           create: "%{user_name} created the %{resource_name} blog post in %{space_name}"
           delete: "%{user_name} deleted the %{resource_name} blog post from %{space_name}"
           update: "%{user_name} updated the %{resource_name} blog post in %{space_name}"
+      content_blocks:
+        highlighted_posts:
+          see_all: See all posts
       last_activity:
         new_post: 'New post:'
       models:
