Define and register a content block for related participatory processes in processes landing page

--- a/decidim-participatory_processes/config/locales/en.yml
+++ b/decidim-participatory_processes/config/locales/en.yml
@@ -451,6 +451,8 @@ en:
       content_blocks:
         highlighted_processes:
           name: Highlighted processes
+        related_processes:
+          name: Related processes
       index:
         title: Participatory processes
       last_activity:
