Redesign: menu breadcrumb (#10200)
* Add FooterMenuPresenter to display menu items in footer

* Set fixed links in redesigned_main_legal partial

* Fix translation call

* Define a cell for static_pages and topics configured to appear in footer

* Reorder elements in main links of footer and define links and texts

* Fix path method call

* Fix translation

* Replace h5 with h2 in footer pages cells topics titles

* Use redesigned participatory space layout with a content_for block

* Add dynamic breadcrumb root menu elements

* Recover menu

* Move content to partial

* Remove fixed text

* Allow passing options to activity cell from activities cell and define layout and author layout

* Define a cell for last activities in breadcrumb root

* Add comment

* Fix deprecated method use

* Allow action buttons in menu to be defined from participatory spaces layouts

* Allow definition of extra breadcrumb elements from participatory spaces

* Define current space item and dropdown from participatory processes

* Remove :participatory_space_menu content_for element

* Integrate menu breadcrumb for mobile and tablet

* Remove unused partials

* Fix link and translation

* Fix linter offense and indentation

* Avoid accessibility validation errors in mobile version when secondary dropdown is blank

* Add links to breadcrumbs when url defined

* Fix headers hierarchy

* Define generic participatory space dropdown metadata cell

* Inherit process_dropdown metadata cell from generic cell

* Define assembly dropdown metadata cell

* Define current_participatory_space_breadcrumb_item for assemblies

* Remove useless blank line

* Define conference dropdown metadata cell

* Define current_participatory_space_breadcrumb_item for conferences

* refactor breadcrumb desktop

* refacto main dropdown

* refactor secondary dropdown

* Reorder methods

* Use diferent id for repeated element of breadcrumb

* 

--- a/decidim-core/config/locales/en.yml
+++ b/decidim-core/config/locales/en.yml
@@ -1854,8 +1854,13 @@ en:
         cc_by_license: Creative Commons License
         data_consent_settings: Cookie settings
         decidim_logo: Decidim Logo
+        decidim_title: Decidim
         download_open_data: Download Open Data files
         made_with_open_source: Website made with <a target="_blank" href="https://github.com/decidim/decidim">free software</a>.
+        resources: Resources
+        sign_in: Sign In
+        sign_up: Sign Up
+        terms_and_conditions: Terms and Conditions
       header:
         close_menu: Close menu
         main_menu: Main menu
@@ -1890,6 +1895,7 @@ en:
       user_menu:
         account: 'User account: %{name}'
         admin_dashboard: Admin dashboard
+        configuration: Configuration
         conversations: Conversations
         notifications: Notifications
         profile: My account
