--- a/decidim-participatory_processes/config/locales/en.yml
+++ b/decidim-participatory_processes/config/locales/en.yml
@@ -498,19 +498,10 @@ en:
         show:
           title: About this process
       show:
-        area: Area
         belongs_to_group: This process belongs to
         dates: Dates
-        developer_group: Promoter group
-        end_date: End date
-        local_area: Organization Area
-        participatory_scope: What is decided
-        participatory_structure: How is it decided
         private_space: This is a private process
         related_processes: Related processes
-        scope: Scope
-        start_date: Start date
-        target: Who participates
         unspecified: Not specified
     statistics:
       processes_count: Processes
@@ -529,9 +520,10 @@ en:
         index:
           promoted_processes: Highlighted processes
         participatory_process:
-          active_step: 'Current phase:'
+          active_step: Current phase
           more_info: More info
           more_info_about: More info about process %{resource_name}
+          see_all_activity: See all the activity
           take_part: Take part
           take_part_in: Take part in process %{resource_name}
       process_header_steps:
