Add date and type filters to processes

--- a/decidim-participatory_processes/config/locales/en.yml
+++ b/decidim-participatory_processes/config/locales/en.yml
@@ -482,6 +482,7 @@ en:
             upcoming:
               one: 1 upcoming process
               other: "%{count} upcoming processes"
+          date: Date
           explanations:
             no_active: No active processes
             no_active_nor_upcoming: No active nor upcoming processes
@@ -493,6 +494,7 @@ en:
             past: Past
             upcoming: Upcoming
           see: See
+          type: Type
         index:
           loading: Loading results...
         show:
