Add missing locale

--- a/decidim-core/config/locales/en.yml
+++ b/decidim-core/config/locales/en.yml
@@ -1444,6 +1444,7 @@ en:
         skip: Skip to results
       flag_modal:
         already_reported: This content is already reported and it will be reviewed by an admin.
+        close: Close
         description: Is this content inappropriate?
         does_not_belong: Contains illegal activity, suicide threats, personal information, or something else you think doesn't belong on %{organization_name}.
         offensive: Contains racism, sexism, slurs, personal attacks, death threats, suicide requests or any form of hate speech.
